--- a/2-9演習問題.css
+++ b/2-9演習問題.css
@@ -59,7 +59,7 @@ main {
 }
 
 .title {
-  margin: 15px 5px 0 0;
+  margin: 15px 0 5px;
 }
 
 footer {
@@ -67,3 +67,28 @@ footer {
   height: 50px;
   background-color: #aaa;
 }
+
+@media screen and (max-width: 425px) {
+  header {
+    width: 100%;
+    height: 50px;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .box-item {
+    width: 90%;
+    margin-bottom: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  footer {
+    width: 100%;
+    height: 50px;
+  }
